--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,13 @@
             <version>1.0-alpha-1</version>
         </dependency>
 
-        <!-- Modificar tag version “X.X.X” según corresponda. MySQL 5.X: 5.1.28,  MySQL 8.X: 8.0.13  -->
+        <!-- Modificar tag version “X.X.X” según corresponda. MySQL 5.X: 5.1.28,  MySQL 8.X: 8.0.13
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.17</version>
+        </dependency> -->
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -47,6 +53,7 @@
             <artifactId>hsqldb</artifactId>
             <version>2.4.0</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
